Tweaking booking bar positioning

--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -139,7 +139,7 @@
             {% endif %}
 
             {% if related_links %}
-                <section class="section section--top-space bg bg--light">
+                <section class="section section--top-space bg bg--light booking-bar__last-item">
                     {% include "patterns/organisms/related-links/related-links.html" with related_links=related_links title="More at the RCA" %}
                 </section>
             {% endif %}
