--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -78,6 +78,7 @@
 @import 'components/related-links';
 @import 'components/research-centre-overview';
 @import 'components/responsive-object';
+@import 'components/results';
 @import 'components/rich-text';
 @import 'components/scroll';
 @import 'components/search';
