--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -42,34 +42,47 @@
         <div class="page__content">
 
             <div class="section section--opposite-notch bg bg--dark">
+
                 <div class="section__notch section__notch--opposite">
                     <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col section__notch-fill--second-col@medium">
                         {% include "patterns/molecules/categories-tablist/categories-tablist.html" %}
                     </div>
                 </div>
+
             </div>
 
             <section class="section bg bg--light">
 
-                <div class="section__row project-overview">
-                    <div class="section__content grid">
-                        <div class="project-overview__content layout__start-one layout__span-two layout__@large-start-two layout__@large-span-three">
-                            <div class="project-overview__media">
-                                {% if page.project_image and page.project_video %}
-                                    {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=page.project_video out_of_grid=True curriculum=False heading=False has_meta=False copy=False subheading=False image=page.centre_image caption=page.project_image_caption %}
-                                {% endif %}
-                            </div>
-                
-                        </div>
+                <div class="section__row section__row--first-small section__row--last-small grid">
+                    <div class="results-total heading heading--four layout__start-one layout__span-two layout__@large-start-two">
+                        <span class="results-total__type">Projects</span>
+                        <span class="results-total__number">236</span>
                     </div>
                 </div>
 
+                {% if page.feature %}
+                    <div class="section__row section__row--last">
+                        {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=page.feature.video heading=false subheading=page.feature.sub_heading image=page.feature.image has_meta=True meta_heading=page.feature.page_title meta_copy=page.feature.page_summary href=page.feature.page_link_url caption=false video=false  %}
+                    </div>
+                {% endif %}
 
-                <div class="section__notch">
-                    <div class="section__notch-fill section__notch-fill--first-col"></div>
+                <div class="section__row section__row--last grid">
+                    <div class="results layout__start-one layout__span-two layout__@large-start-two layout__@large-span-three">
+                        {% for item in page.results %}
+                            <div class="results__item layout__span-two layout__@large-span-one">
+                                {% include "patterns/molecules/card/card--project.html" %}
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+
+                <div class="section__row">
+                    {% include "patterns/molecules/pagination/pagination.html" %}
                 </div>
 
             </section>
+
+            
         
         </div>
 
