--- a/rca/project_styleguide/templates/patterns/molecules/categories-tablist/categories-tablist.html
+++ b/rca/project_styleguide/templates/patterns/molecules/categories-tablist/categories-tablist.html
@@ -1,16 +1,18 @@
-<nav class="categories-tablist bg bg--light" aria-label="Filter programmes">
+<nav class="categories-tablist {% if modifier %}categories-tablist--{{ modifier }}{% endif %} bg bg--light" aria-label="Filter programmes">
     <h2 class="body body--two categories-tablist__heading">{{ value.title }}</h2>
     <div role="tablist">
         {% for item in value.items %}
-            <a id="{{ forloop.counter }}-tab" href="{{ item.href }}" class="categories-tablist__tab body body--one" role="tab" aria-selected="false" aria-controls="{{ item.title }}">
+            <a id="{{ forloop.counter }}-tab" href="{{ item.href }}" class="categories-tablist__tab {% if item.selected %}categories-tablist__tab--selected{% endif %} body body--one" role="tab" aria-selected="{% if item.selected %}true{% else %}false{% endif %}" aria-controls="{{ item.title }}">
                 {{ item.title }}
             </a>
         {% endfor %}
-        <a class="categories-tablist__tab categories-tablist__tab--reset" href="#">
-            <svg class="logo__image" width="14" height="14">
-                <use xlink:href="#reset" /> 
-            </svg>
-            Reset
-        </a>
+        {% if reset %}
+            <a class="categories-tablist__tab categories-tablist__tab--reset" href="#">
+                <svg class="categories-tablist__reset-icon" width="14" height="14">
+                    <use xlink:href="#reset" /> 
+                </svg>
+                <span class="categories-tablist__reset-label">Reset</span>
+            </a>
+        {% endif %}
     </div>
 </nav>
