--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -14,27 +14,20 @@
 
     <div class="page page--no-hero">
 
-        <div class="page__notch grid"> 
-            <div class="page__notch-block bg bg--dark"></div>
-        </div>
-
         <header class="page__header bg bg--dark">
             <div class="title-area title-area--research-centre grid">
-                <div class="title-area__content">
-                    <nav class="title-area__breadcrumb" aria-label="Breadcrumb">
+                <div class="title-area__content title-area__content--three-col">
+                    <nav class="title-area__breadcrumb layout__span-two layout__@large-span-three" aria-label="Breadcrumb">
                         {% include "patterns/molecules/breadcrumb/breadcrumb.html" with breadcrumb=page.breadcrumb %}
                     </nav>
                     {% if page.title %}
-                        <h1 class="title-area__heading heading heading--display-two">{{ page.title }}</h1>
+                        <div class="title-area__heading layout__span-two layout__start-one layout__@large-span-one">
+                            <h1 class="heading heading--display-two">{{ page.title }}</h1>
+                        </div>
                     {% endif %}
-
                     {% if page.introduction %}
-                        <div class="title-area__introduction">{{ page.introduction }}</div>
+                        <div class="title-area__introduction layout__span-one layout__start-two layout__@large-start-three">{{ page.introduction }}</div>
                     {% endif %}
-                </div>
-                <div class="title-area__tabs">
-                    
-                    
                 </div>
             </div>
         </header>
@@ -44,8 +37,8 @@
             <div class="section section--opposite-notch bg bg--dark">
 
                 <div class="section__notch section__notch--opposite">
-                    <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col section__notch-fill--second-col@medium">
-                        {% include "patterns/molecules/categories-tablist/categories-tablist.html" %}
+                <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col section__notch-fill--second-col@medium">
+                        {% include "patterns/molecules/categories-tablist/categories-tablist.html" with value=page.filters modifier="large" reset=True %}
                     </div>
                 </div>
 
