--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -43,6 +43,7 @@
 @import 'components/feature-image';
 @import 'components/featured-alumni';
 @import 'components/fees';
+@import 'components/filter-bar';
 @import 'components/footer-link-item';
 @import 'components/form';
 @import 'components/form-item';
