--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -34,15 +34,26 @@
 
         <div class="page__content">
 
-            <div class="section section--opposite-notch bg bg--dark">
+            <section class="section section--opposite-notch">
 
-                <div class="section__notch section__notch--opposite">
-                <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col section__notch-fill--second-col@medium">
-                        {% include "patterns/molecules/categories-tablist/categories-tablist.html" with value=page.filters modifier="large" reset=True %}
+                <div class="section__row bg bg--dark filter-bar filter-bar--large">
+                    <div class="section__notch section__notch--opposite">
+                        <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col section__notch-fill--second-col@medium">
+                            {% include "patterns/molecules/categories-tablist/categories-tablist.html" with value=page.filters modifier="large" reset=True %}
+                        </div>
                     </div>
                 </div>
 
-            </div>
+                <div class="filter-bar filter-bar--small bg bg--light">
+                    <a class="filter-bar__link body body--two" href="#">
+                        <span class="filter-bar__label">Filter projects</span>
+                        <svg width="12" height="8" class="filter-bar__icon" aria-hidden="true">
+                            <use xlink:href="#arrow"></use>
+                        </svg>
+                    </a>
+                </div>
+
+            </section>
 
             <section class="section bg bg--light">
 
@@ -55,7 +66,7 @@
 
                 {% if page.feature %}
                     <div class="section__row section__row--last">
-                        {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=page.feature.video heading=false subheading=page.feature.sub_heading image=page.feature.image has_meta=True meta_heading=page.feature.page_title meta_copy=page.feature.page_summary href=page.feature.page_link_url caption=false video=false  %}
+                        {% include "patterns/organisms/image-video-block/image-video-block.html" with heading=false subheading=page.feature.sub_heading meta_heading=page.feature.meta_heading image=page.feature.image has_meta=True meta_copy=page.feature.page_summary href=page.feature.href caption=false video=false %}
                     </div>
                 {% endif %}
 
