--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -73,7 +73,7 @@
                 <div class="section__row section__row--last grid">
                     <div class="results layout__start-one layout__span-two layout__@large-start-two layout__@large-span-three">
                         {% for item in page.results %}
-                            <div class="results__item layout__span-two layout__@large-span-one">
+                            <div class="results__item layout__span-two layout__@medium-span-one">
                                 {% include "patterns/molecules/card/card--project.html" %}
                             </div>
                         {% endfor %}
