--- a/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
+++ b/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
@@ -38,13 +38,13 @@
     </symbol>
 
     <symbol id="arrow-left" viewBox="0 0 46 46" fill="none">
-        <path d="M0.5,23a22.5,22.5 0 1,0 45,0a22.5,22.5 0 1,0 -45,0" stroke="#797979"></path>
-        <path stroke="#797979" d="M25.5 14.5L17 23l8.5 8.5"></path>
+        <path d="M0.5,23a22.5,22.5 0 1,0 45,0a22.5,22.5 0 1,0 -45,0"></path>
+        <path d="M25.5 14.5L17 23l8.5 8.5"></path>
     </symbol>
 
     <symbol id="arrow-right" viewBox="0 0 46 46" fill="none">
-        <path d="M0.5,23a22.5,22.5 0 1,0 45,0a22.5,22.5 0 1,0 -45,0" stroke="#797979"></path>
-        <path stroke="#797979" d="M19.5 14.5L28 23l-8.5 8.5"></path>
+        <path d="M0.5,23a22.5,22.5 0 1,0 45,0a22.5,22.5 0 1,0 -45,0"></path>
+        <path d="M19.5 14.5L28 23l-8.5 8.5"></path>
     </symbol>
 
     <symbol id="arrow-right-filled" viewBox="0 0 46 46" fill="currentColor">
