--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -68,6 +68,7 @@
 @import 'components/overview';
 @import 'components/outdated-banner';
 @import 'components/page';
+@import 'components/pagination';
 @import 'components/pathways';
 @import 'components/pathway-item';
 @import 'components/partnerships';
