--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -70,7 +70,7 @@
                     </div>
                 {% endif %}
 
-                <div class="section__row section__row--last grid">
+                <div class="section__row section__row--last-small grid">
                     <div class="results layout__start-one layout__span-two layout__@large-start-two layout__@large-span-three">
                         {% for item in page.results %}
                             <div class="results__item layout__span-two layout__@medium-span-one">
@@ -80,8 +80,10 @@
                     </div>
                 </div>
 
-                <div class="section__row">
-                    {% include "patterns/molecules/pagination/pagination.html" %}
+                <div class="section__row section__row--last grid">
+                    <div class="layout__span-two layout__@large-span-one layout__start-one layout__@large-start-three">
+                        {% include "patterns/molecules/pagination/pagination.html" %}
+                    </div>
                 </div>
 
             </section>
