--- a/rca/static_src/sass/components/_pagination.scss
+++ b/rca/static_src/sass/components/_pagination.scss
@@ -10,8 +10,11 @@
     }
 
     &__item {
+        position: relative;
+
         &--current {
-            text-decoration: underline;
+            @include underline-hover-target();
+            @include underline-hover-target-reset();
             margin-right: $spacing;
             margin-left: $spacing;
         }
