--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -40,7 +40,7 @@
             {% include "patterns/molecules/booking-bar/booking-bar.html" with item=page.booking_bar modal='booking-details' %}
         {% endif %}
 
-        <div class="page__content js-sticky-point">
+        <div class="page__content js-sticky-point js-sticky-point--bottom">
 
             <section class="section section--start bg bg--dark">
 
