--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -104,6 +104,7 @@
 @import 'components/step-item';
 @import 'components/stat-block';
 @import 'components/steps';
+@import 'components/sticky-filter-bar';
 @import 'components/student-listing';
 @import 'components/tabs';
 @import 'components/tab-item';
