--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body_class %}
-    app--project-detail
+    app--project-listing
 {% endblock %}
 
 {% block content %}
@@ -32,9 +32,9 @@
             </div>
         </header>
 
-        <div class="page__content">
+        <div class="page__content js-sticky-point js-sticky-point--top">
 
-            <section class="section section--opposite-notch">
+            <section class="section section--opposite-notch sticky-filter-bar">
 
                 <div class="section__row bg bg--dark filter-bar filter-bar--large">
                     <div class="section__notch section__notch--opposite">
