--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -65,7 +65,7 @@
                 </div>
 
                 {% if page.feature %}
-                    <div class="section__row section__row--last">
+                    <div class="section__row">
                         {% include "patterns/organisms/image-video-block/image-video-block.html" with heading=false subheading=page.feature.sub_heading meta_heading=page.feature.meta_heading image=page.feature.image has_meta=True meta_copy=page.feature.page_summary href=page.feature.href caption=false video=false %}
                     </div>
                 {% endif %}
