--- a/rca/static_src/sass/components/_project-overview.scss
+++ b/rca/static_src/sass/components/_project-overview.scss
@@ -5,20 +5,18 @@
         }
     }
 
-    &__body {
-        margin-bottom: ($gutter * 2);
-
+    &__introduction {
         @include media-query(large) {
             padding-top: ($gutter * 4);
-            padding-left: 33.333%;
-            margin-bottom: ($gutter * 4);
         }
     }
 
     &__media {
         margin-bottom: ($gutter * 2);
+        padding-top: ($gutter * 2);
 
         @include media-query(large) {
+            padding-top: ($gutter * 4);
             margin-bottom: ($gutter * 6);
         }
     }
