--- a/rca/project_styleguide/templates/patterns/pages/project/project_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_detail.html
@@ -39,10 +39,10 @@
                 
                 <div class="section__row project-overview">
                     <div class="section__content grid">
-                        {% if page.project_description %}
+                        {% if page.introduction %}
                             <div class="project-overview__introduction layout__start-one layout__span-two  layout__@large-start-three layout__@large-span-two">
                                 <h2 class="research-centre-overview__heading section__heading heading heading--five">
-                                    {{ page.project_description }}
+                                    {{ page.introduction }}
                                 </h2>
                             </div>
                         {% endif %}
