More spacing for slideshow on mobile

--- a/rca/static_src/sass/components/_slideshow.scss
+++ b/rca/static_src/sass/components/_slideshow.scss
@@ -182,4 +182,12 @@
             stroke: $color--meta-lightbg;
         }
     }
+
+    .app--project-detail & {
+        padding-bottom: ($gutter * 4.5);
+
+        @include media-query(large) {
+            padding-bottom: ($gutter * 2);
+        }
+    }
 }
