--- a/rca/project_styleguide/templates/patterns/organisms/index-module/index-module.html
+++ b/rca/project_styleguide/templates/patterns/organisms/index-module/index-module.html
@@ -4,10 +4,9 @@
             <h2 class="index-module__heading heading heading--two">{{ item.title }}</h2>
         </div>
         <div class="index-module__content">
-            {% for item in item.cards %}
-                {% include "patterns/molecules/card/card.html" with modifier="simple" %}
+            {% for item in items %}
+                {% include "patterns/molecules/card/card.html" with modifier="simple" item=item.page %}
             {% endfor %}
         </div>
     </div>
 </div>
-                
