Implements fields for guide page

--- a/rca/project_styleguide/templates/patterns/molecules/profile-detail/profile-detail.html
+++ b/rca/project_styleguide/templates/patterns/molecules/profile-detail/profile-detail.html
@@ -13,7 +13,7 @@
     <div class="profile-detail__content">
         <div class="profile-detail__overview">
             <div class="profile-detail__header">
-                <h3 class="profile-detail__heading heading heading--five">{{ item.name }}</h3>
+                <h3 class="profile-detail__heading heading heading--five">{{ item.first_name }} {{ item.surname }}</h3>
             </div>
             <h4 class="profile-detail__job-title body body--one">{{ item.role }}</h4>
         </div>
