--- a/rca/static_src/sass/components/_people-module.scss
+++ b/rca/static_src/sass/components/_people-module.scss
@@ -46,4 +46,11 @@
             grid-column: 4 / span 1;
         }
     }
+
+    .app--guide & {
+        // Match other heading sizes on the guide page
+        &__heading {
+            @include font-size(xl);
+        }
+    }
 }
