--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -209,7 +209,7 @@
             display: none;
 
             @include media-query(large) {
-                display: block;
+                display: grid;
             }
         }
 
