Project detail visual updates

--- a/rca/project_styleguide/templates/patterns/molecules/streamfield/blocks/quote_block.html
+++ b/rca/project_styleguide/templates/patterns/molecules/streamfield/blocks/quote_block.html
@@ -1,6 +1,6 @@
 <blockquote class="quote">
     <div class="quote__container">
-        <p class="quote__text heading heading--three">"{{ value.quote }}"</p>
+        <p class="quote__text heading heading--three">&#8220;{{ value.quote }}&#8221;</p>
         {% if value.author or value.job_title %}
         <cite class="quote__cite {% if value.author and value.job_title %}quote__cite--both{% endif %}">
             {% if value.author %}
