--- a/rca/project_styleguide/templates/patterns/organisms/related-links/related-links.html
+++ b/rca/project_styleguide/templates/patterns/organisms/related-links/related-links.html
@@ -1,4 +1,4 @@
-<div class="section__row grid related-links">
+<div class="section__row grid related-links {% if modifier %}related-links--{{ modifier }}{% endif %}">
     <div class="section__header related-links__header">
         <h2 class="section__heading related-links__heading heading heading--four">
             {{ title|default:"More at the RCA"}}
