--- a/rca/static_src/sass/components/_link.scss
+++ b/rca/static_src/sass/components/_link.scss
@@ -271,4 +271,12 @@
             display: inline;
         }
     }
+
+    .related-links__item & {
+        font-family: $font--primary;
+
+        @include media-query(large) {
+            font-family: $font--secondary;
+        }
+    }
 }
