--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.html
@@ -17,11 +17,7 @@
         <div class="key-details__section key-details__section--tags">
             <ul class="key-details__list">
                 <li class="key-details__list-item">
-                {% if page.end_date %}
-                    {{ page.start_date|date:'Y' }} - {{ page.end_date|date:'Y' }}
-                {% else %}
-                    {{ page.start_date|date:'Y' }}
-                {% endif %}
+                {{ page.start_date|date:'Y' }} {% if page.end_date %} - {{ page.end_date|date:'Y' }}{% endif %}
                 </li>
             </ul>
         </div>
@@ -52,8 +48,8 @@
     {% endif %}
     {% if page.specification_document %}
         <div class="key-details__section key-details__section--action">
-            <a class="key-details__link link link--secondary link--download" href="{{ page.specification_document }}">
-                <span class="link__label">Download the full {% if page.specification_document %}{{ page.specification_document }} {% endif %}programme specification</span>
+            <a class="key-details__link link link--secondary link--download" href="{{ page.specification_document.url }}">
+                <span class="link__label">Download the full {{ page.specification_document }} programme specification</span>
                 <svg width="8" height="12" class="link__icon" aria-hidden="true"><use xlink:href="#download"></use></svg>
             </a>
         </div>
